# backend/routes/api.php
@@ -7,6 +7,7 @@ use Illuminate\Support\Facades\Route;
 
 
 Route::get('/categories', [CategoryController::class,'index']);
+Route::get('/categories/{categoryId}/products', [ProductController::class, 'getProductsByCategory']);
 Route::get('/products', [ProductController::class, 'index']);
 
 Route::get('/user', function (Request $request) {
